static/scss/main/streak_list.scss
.streak_list {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-gap: 20px;
    align-items: start;

    .streak_box {
        min-height: 225px;
        min-width: 0;
        background: white;
        border: 1px solid $border_color;
        position: relative;
        font-size: $body_size;

        .upper_content {
            border-bottom: 1px solid $border_color;
            padding: 10px 20px;
            box-sizing: border-box;
        }

        .streak_tag {
            position: absolute;
            top: 10px;
            right: 10px;
            font-size: 12px;
            text-transform: uppercase;
            background: lighten($red, 10%);
            color: white;
            padding: 2px 4px;
            border-radius: 4px;
            font-weight: bold;

            &.hidden_tag {
                background: $purple;
            }
        }

        h3 {
            font-size: 28px;
            font-weight: normal;
            overflow: hidden;
            line-height: 36px;
            margin: 0;
            @include single_line;

            @include mobile_width {
                .responsive & {
                    font-size: 20px;
                    line-height: normal;
                }
            }

            a {
                color: #333;
                text-decoration: none;
                @include transition(color 0.2s ease);

                &:hover {
                    color: $link_color;
                }
            }
        }

        .streak_host {
            color: #999;
            margin-top: 9px;
            @include single_line;
            padding-bottom: 6px;

            a {
                color: #666;
                text-decoration: none;
                border-bottom: 2px solid $link_color;
                @include transition(color 0.2s ease);

                &:hover {
                    color: $link_color;
                }
            }
        }

        .date_range {
            @include single_line;
            color: #666;
            font-size: 15px;
        }

        .streak_stats {
            text-align: center;
            padding-top: 10px;

            .stat_box {
                display: inline-block;
                margin-right: 20px;
                min-width: 50px;

                &:last-child {
                    margin-right: 0;
                }
            }

            .stat_value {
                font-size: 24px;
            }

            .stat_label {
                font-size: 16px;
                color: #666;
            }
        }

        .submit_btn {
            display: block;
            margin: 10px 20px;
        }

        .status_message {
            color: #999;
            text-align: center;
            margin: 10px 20px;
            height: 35px;
            line-height: 35px;
        }

        .progress_row {
            margin: 15px 20px;
        }

        .progress_outer {
            height: 10px;
            background: $border_color;
            border-radius: 10px;

            .progress_inner {
                height: 10px;
                border-radius: 10px;
                background: $green;
            }
        }
    }
}

